- Fixed problem with scrollOverflow:true and margins #2071

--- a/jquery.fullPage.css
+++ b/jquery.fullPage.css
@@ -92,6 +92,9 @@ html.fp-enabled,
     overflow: hidden;
     position: relative;
 }
+.fp-scroller{
+    overflow: hidden;
+}
 .iScrollIndicator{
     border: 0 !important;
 }
